Further Work on Algorithm 1